objects/scormanywhere__Related_Media__c.object
<CustomObject>
    <fields>
        <fullName>scormanywhere__Course__c</fullName>
        <label>Media</label>
        <referenceTo>scormanywhere__Course__c</referenceTo>
        <relationshipLabel>Related Media</relationshipLabel>
        <relationshipName>Related_Media</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Object_Id__c</fullName>
        <label>Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Related Media</label>
    <listViews>
        <fullName>scormanywhere__All</fullName>
        <columns>scormanywhere__Course__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>scormanywhere__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RMN-{0}</displayFormat>
        <label>Related Media Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Media</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>